# ploy

./: .env.production  .gitignore  AGENTS.md  AWS_EC2_STATUS.md  BACKEND_API_COMPLETE.md  BACKEND_API_IMPLEMENTATION.md  BACKEND_API_REQUIREMENTS.md  CLAUDE.md  COMPLETE_SYSTEM_SUMMARY.md  Cargo.toml  DEPLOYMENT_QUICKSTART.md  DEPLOYMENT_STATUS_FINAL.md  DEVOPS_ASSESSMENT.md  DEVOPS_IMPLEMENTATION_GUIDE.md  DEVOPS_QUICK_REFERENCE.md  DEVOPS_REVIEW_INDEX.md  DEVOPS_SUMMARY.md  DEVOPS_TICKETS.md  Dockerfile  FINAL_INTEGRATION_REPORT.md  FRONTEND_COMPLETION_SUMMARY.md  FRONTEND_DESIGN.md  FRONTEND_INTEGRATION_REPORT.md  FRONTEND_TEST_STATUS.md  GITHUB_ACTIONS_README.md  MASTER_INDEX.md  NBA_SWING_COMPLETION_REPORT.md  NBA_SWING_INDEX.md  NBA_SWING_RESOURCES.md  NBA_SWING_STATUS.md  PHASE1_COMPLETION_REPORT.md  PHASE1_SUMMARY_CN.md  PROJECT_DELIVERY_SUMMARY.md  QUICKSTART.md  QUICK_OVERVIEW.md  QUICK_REFERENCE.md  README.md  README_DEVOPS_REVIEW.md  README_NBA_SWING.md  SECURITY_FIXES_STATUS.md  (+22 more)
.claude/: ralph-loop.local.md
.claude/skills/: README.md  sports-bet-example.md  sports-bet.md  sports-bet.ts  sports_bet.py
.github/workflows/: deploy-aws-jp.yml  deploy-prebuilt.yml  deploy-tango21.yml  deploy.yml  get-logs.yml  stop-trading.yml  test.yml
.serena/: project.yml
config/: default.toml  directional_live.toml  production.example.toml
config/strategies/: momentum-aws-live.toml  momentum.toml  momentum_default.toml  pattern_memory.toml  pattern_memory_default.toml  split_arb.toml  split_arb_default.toml
data/: klines.csv
deployment/: com.ploy.trading.plist  deployments.json  env.crypto-collector.example  env.crypto-dryrun.example  env.crypto-live.example  env.example  env.platform-live.example  env.sports-live.example  env.sports-pm.example  ploy-crypto-collector.service  ploy-crypto-dryrun.service  ploy-crypto-live.service  ploy-maintenance.service  ploy-maintenance.timer  ploy-orderbook-history.service  ploy-platform-live.service  ploy-sports-pm.service  ploy-strategy-momentum-dryrun.service  ploy-strategy-pattern-memory-dryrun.service  ploy-strategy-split-arb-dryrun.service  ploy.service  ploy@.service  production.toml
deployment/aws/: install.sh  ploy.service
deployment/config/: crypto_dry_run.toml  crypto_live.toml  platform_live.toml  sports_live.toml  sports_pm.toml
docs/: AWS_EC2_DEPLOYMENT_RUNBOOK.md  CONTRIBUTING.md  CRYPTO_LOB_ML_DEPLOY_CHECKLIST.md  DRY_RUN_PLATFORM_CHECKLIST.md  EVENT_EDGE_AGENT.md  INTEGRATION_SUMMARY.md  NBA_SWING_FRONTEND.md  NBA_SWING_STRATEGY_COMPLETION.md  NBA_SWING_STRATEGY_MVP.md  OPENCLAW_INTEGRATION.md  STRATEGY_FRAMEWORK_4_PILLARS.md  live-arbitrage-strategy.md  nba-moneyline-analysis.md  polymarket-api-audit-2026-02-19.md  review-agent-native-architecture-2026-02-22.md  review-code-quality.md  review-performance.md  review-security-audit.md  review-strategy-analysis.md  sports-data-aggregator.md
docs/archive/: AWS_DEPLOYMENT_READINESS.md  EC2_DEPLOYMENT_GUIDE.md  GITHUB_ACTIONS_SETUP.md  NBA_SWING_QUICKSTART.md  data-stability-improvements.md
docs/brainstorms/: 2026-02-13-24hr-pm-trading-hardening-brainstorm.md
docs/notes/: crypto_lob_ml_architecture_boundary.md  crypto_lob_ml_strategy_fix.md
docs/plans/: 2026-02-01-strategy-manager-design.md  2026-02-02-polymarket-control-plane-jetstream-design.md  2026-02-17-agent-framework-design.md  2026-02-17-pattern-memory-design.md  2026-02-17-pattern-memory-implementation-plan.md  2026-02-21-openclaw-control-plane-governance-design.md  2026-02-22-kalshi-full-parity-design.md  2026-02-22-kalshi-full-parity-implementation-plan.md  2026-02-25-architecture-review-fixes.md  2026-02-25-lob-ml-pattern-memory-overhaul-design.md
examples/: api_server.rs  test_grok_agent.rs  test_winprob.rs
examples/openclaw/: README.md
infra/systemd/: claimer.env.example  ploy-claimer.service
infra/terraform/: cloudwatch.tf  ec2.tf  iam.tf  main.tf  outputs.tf  rds.tf  security.tf  terraform.tfvars.example  variables.tf  vpc.tf
migrations/: 001_init.sql  002_reliability_foundation.sql  003_supervisor_tables.sql  004_event_sourcing.sql  005_idempotency_and_security.sql  005_security_fixes.sql  006_position_management.sql  007_performance_indexes.sql  008_nba_comeback.sql  009_event_registry.sql  010_clob_quote_ticks.sql  011_nba_live_observations.sql  012_nba_schedule_calendar.sql  013_schema_repair_and_observability.sql  014_multi_account_and_collector_targets.sql  015_pm_token_settlements.sql  016_security_fixes_legacy.sql  017_strategy_evaluations.sql  018_training_data_tables.sql  019_data_integrity.sql  020_chainlink_tables.sql  CLAUDE.md
models/crypto/: lob_logistic_compat.json
models/leadlag/: action_values.json
ploy-frontend/: CLAUDE.md  DEPLOYMENT.md  README.md  STRATEGY_MONITOR_DESIGN.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
ploy-frontend/public/: runtime-config.js
ploy-openclaw/: .env.example  openclaw.json
ploy-sidecar/: .env.example  .env.minimax.example  README.md  package-lock.json  package.json
results/: backtest_results.json  trades.json
scripts/: aws_ec2_deploy.sh  check_polymarket_api_usage.sh  collect_data.py  collect_klines.sh  deploy-aws-jp.sh  deploy-simple.sh  deploy.sh  dry-run-platform-smoke.sh  event_edge_daemon.sh  install-service.sh  install_claimer_service_ssm.sh  pattern_memory_dryrun.sh  ploy_accountctl.sh  ploy_maintenance.sh  pm_bursts_watch.sh  pm_trade_alerts_watch.sh  pm_trades_watch.sh  report_drawdown.py  simulate_backtest.py  soak_test_24h.sh  split-arb-notify.sh  ssh_ployctl.sh  train_crypto_binance_threshold_tcn_onnx_from_db.py  train_crypto_lob_mlp.py  train_crypto_lob_mlp_onnx_from_db.py  train_crypto_lob_tcn_onnx_from_db.py  train_crypto_lob_tick_settlement_onnx_from_db.py
src/: CLAUDE.md  ai_agents.rs  cli.rs  config.rs  error.rs  lib.rs  main.rs  main_agent_mode.rs  main_dispatch.rs  main_legacy.rs  main_modes.rs  main_runtime.rs  trading_agents.rs  validation.rs
src/agent/: grok.rs  (+14 more)
tests/: architecture_gateway_only.rs  legacy_live_gate.rs  strategy_evaluations_and_deployment_gate.rs
(+359 files in other folders)
