[package]
name = "ploy"
version = "0.1.0"
edition = "2021"
description = "Polymarket two-leg arbitrage trading bot"
authors = ["Your Name"]

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full", "sync", "time", "signal"] }

# WebSocket
tokio-tungstenite = { version = "0.21", features = ["native-tls"] }
futures-util = "0.3"
futures = "0.3"
native-tls = "0.2"
tokio-native-tls = "0.3"

# HTTP client
reqwest = { version = "0.11", features = ["json", "rustls-tls"], default-features = false }

# Database
sqlx = { version = "0.7", features = ["runtime-tokio", "postgres", "chrono", "rust_decimal", "uuid"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Configuration
config = "0.14"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "registry"] }
tracing-appender = "0.2"

# Numeric types
rust_decimal = { version = "1", features = ["serde", "serde-with-str"] }
rust_decimal_macros = "1"

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# Error handling
thiserror = "1"
anyhow = "1"

# Async traits
async-trait = "0.1"

# UUID
uuid = { version = "1", features = ["v4", "serde"] }

# Crypto for signing (Polymarket requires EIP-712 signatures)
ethers = { version = "2", features = ["rustls"] }

# Official Polymarket CLOB client SDK
polymarket-client-sdk = { version = "0.4", features = ["ws", "gamma", "data", "tracing", "bridge", "clob", "ctf"] }
builder-relayer-client-rust = { version = "=0.1.3", optional = true }
builder_signing_sdk_rs = { version = "0.1.0", optional = true }

# Agent framework (Claude Code CLI) with MCP tools
claude-agent-sdk-rs = "0.6.3"

# Alloy for signing (used by polymarket-client-sdk)
alloy = { version = "1", features = ["signers", "signer-local", "provider-http", "network", "contract", "sol-types", "providers", "reqwest"] }

# HMAC authentication
hmac = "0.12"
sha2 = "0.10"

# Encoding
hex = "0.4"
base64 = "0.21"

# Random number generation
rand = "0.8"

# Ordered floats for BTreeMap keys
ordered-float = "4"

# URL parsing
url = "2"
urlencoding = "2"

# CLI
clap = { version = "4", features = ["derive", "env"] }
toml = "0.8"
dashmap = "6.1.0"
zeroize = { version = "1.8.2", features = ["zeroize_derive"] }
tabled = "0.18"
rpassword = "7"
rustyline = "14"
dirs = "6"

# Unix process management (for strategy daemon control)
[target.'cfg(unix)'.dependencies]
nix = { version = "0.27", features = ["signal", "process"] }

# Terminal UI
crossterm = { version = "0.27", features = ["event-stream"] }
ratatui = "0.29"

# Health check server and API
axum = { version = "0.7", features = ["ws"] }
tower-http = { version = "0.5", features = ["cors"] }

# Reinforcement Learning (optional)
# Using ndarray backend for CPU-based RL training
burn = { version = "0.14", default-features = false, features = ["train", "autodiff", "std", "ndarray"], optional = true }
burn-ndarray = { version = "0.14", optional = true }
# Pin bincode to version compatible with burn (rc.3 has decode_borrowed_from_slice)
bincode = { version = "=2.0.0-rc.3", optional = true }

# DuckDB for offline Parquet analysis (optional)
duckdb = { version = "1.4", features = ["bundled"], optional = true }

# ONNX inference (optional; prefer pure-Rust `tract` for deploy simplicity)
tract-onnx = { version = "0.22.0", optional = true }

[features]
default = ["builder_relayer_sdk"]
api = []  # Enable API module with SQLx compile-time checks (requires DATABASE_URL)
rl = ["burn", "burn-ndarray", "bincode"]
analysis = ["duckdb"]
onnx = ["tract-onnx"]
tcn_db = [] # Legacy db-backed TCN path (currently unused)
builder_relayer_sdk = ["dep:builder-relayer-client-rust", "dep:builder_signing_sdk_rs"]

[dev-dependencies]
tokio-test = "0.4"
mockall = "0.12"
tower = { version = "0.5", features = ["util"] }

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
